exports[`test SignupForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Claim your spot in the Marketplace
    </h1>
  </header>
  <article
    role="main">
    <div>
      <p>
        We’re looking for the very best digital businesses to help deliver 21st century digital products and services to government through the Digital Marketplace.
      </p>
      <p>
        And the rewards? Only the chance to share in the $5.6B spent each year on ICT.
      </p>
    </div>
    <h2>
      Ready to get started?
    </h2>
    <form
      action={undefined}
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Your full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create seller account" />
      <p>
        <small>
          By requesting an account invitation you agree to the 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;

exports[`test SignupForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Claim your spot in the Marketplace
    </h1>
  </header>
  <article
    role="main">
    <div>
      <p>
        We’re looking for the very best digital businesses to help deliver 21st century digital products and services to government through the Digital Marketplace.
      </p>
      <p>
        And the rewards? Only the chance to share in the $5.6B spent each year on ICT.
      </p>
    </div>
    <h2>
      Ready to get started?
    </h2>
    <form
      action="/foo/bar"
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Your full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create seller account" />
      <p>
        <small>
          By requesting an account invitation you agree to the 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;
